--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,4 +1,5 @@
 .background1{
-    background: rgba(218, 165, 32, 0.479);
+    /* background: rgba(218, 165, 32, 0.479); */
+    background-color: rgba(208, 194, 15, 0.18);
     border-radius: 15px;
 }
