--- a/src/Components/Dashbord/AddReview/AddReview.css
+++ b/src/Components/Dashbord/AddReview/AddReview.css
@@ -4,7 +4,7 @@
 }
 .form input, textarea{
     border-radius: 10px;
-    border: 1px solid goldenrod;
+    border: 1px solid black;
     width: 100%;
     padding: 10px;
     margin: 10px;
